--- a/src/components/modals/CreateServerModal.module.css
+++ b/src/components/modals/CreateServerModal.module.css
@@ -12,10 +12,12 @@
     font-size: var(--mantine-font-size-md);
     cursor: pointer;
     transition: background-color 300ms ease;
+    
     &:hover{
-        background-color: light-dark(
-        var(--mantine-color-gray-2),
-        var(--mantine-color-dark-4)
+        background-color:
+        light-dark(
+        var(--mantine-color-gray-5),
+        var(--mantine-color-dark-6)
         );
     }
 }
